# GitLink

./: .gitignore  README.md  client  client.vala  com.asiet.lab.GitLink.flatpak  com.asiet.lab.GitLink.json  server  server.vala  test.main  test.main.vala  text.test  volume
data/: com.asiet.lab.GitLink.desktop.in  com.asiet.lab.GitLink.gschema.xml  com.asiet.lab.GitLink.metainfo.xml.in
data/icons/: meson.build
src/: application.vala  gitlink.gresource.xml  main.vala  meson.build  style-dark.css  style.css  volume.vala  window.blp  window.ui  window.vala
src/gtk/: accounts_page.blp  authentication_page.blp  empty_account_page.blp  home_page.blp  invigilator_page.blp  login_dialog.blp  login_window.blp  logout_dialog.blp  preferences_dialog.blp  repo_clone_dialog.blp  repo_details_dialog.blp  repo_remove_alert.blp  setup_page.blp  ssh_config_page.blp  ssh_create_page.blp  user_config_page.blp  user_page.blp  value_validator.blp  welcome_page.blp  window.blp
src/vala-git/: Git.vala  GitClient.vala  GitRepo.vala  GitUser.vala  RemoteCallbacks.vala
src/vala-helper/: AccountsListModel.vala  Connection.vala  ConnectionManager.vala  ListModels.vala  ProcessManager.vala  ReposListModel.vala  SSHConfigurations.vala
src/vala-ui/: AccountsPage.vala  EmptyAccountPage.vala  HomePage.vala  InvigilatorPage.vala  LoginDialog.vala  LogoutDialog.vala  PreferencesDialog.vala  RepoCloneDialog.vala  RepoDetailsDialog.vala  RepoRemoveAlert.vala  SetupPage.vala  UserPage.vala  ValueValidator.vala  WelcomePage.vala  window.vala
src/vala-ui/login/: AuthenticationPage.vala  LoginWindow.vala  SSHConfigPage.vala  SSHCreatePage.vala  UserConfigPage.vala
