gitlink_sources = [
  'main.vala',
  'application.vala',
  'vala-ui/window.vala',
  'vala-ui/UserPage.vala',
  'vala-ui/DisplayCard.vala',
  'vala-ui/RepoCloneDialog.vala',
  'vala-helper/JsonEngine.vala',
  'vala-helper/ListModels.vala',
  'vala-helper/AccountsListModel.vala',
  'vala-helper/ReposListModel.vala',
  'vala-helper/SSHConfigurations.vala',
  'vala-helper/Connection.vala',
  'vala-helper/Bell.vala',
  'vala-git/Git.vala',
  'vala-git/GitUser.vala',
  'vala-git/GitClient.vala',
  'vala-git/GitRepo.vala',
  'vala-git/RemoteCallbacks.vala',
  'vala-ui/login/AuthenticationPage.vala',
  'vala-ui/login/UserConfigPage.vala',
  'vala-ui/login/SSHConfigPage.vala',
  'vala-ui/login/LoginWindow.vala',
  'vala-ui/login/SSHCreatePage.vala',
  'vala-ui/AccountsPage.vala',
  'vala-ui/SetupPage.vala',
  'vala-ui/InvigilatorPage.vala',
  'vala-ui/ValueValidator.vala',
  'vala-ui/PreferencesDialog.vala',
  'vala-ui/RepoDetailsDialog.vala',
  'vala-ui/RepoRemoveAlert.vala',
  'vala-helper/ProcessManager.vala',
  'vala-helper/ConnectionManager.vala',
]

blueprints_src = [
    'gtk/help-overlay.blp',
    'gtk/window.blp',
    'gtk/user_page.blp',
    'gtk/display_card.blp',
    'gtk/repos_row.blp',
    'gtk/repo_clone_dialog.blp',
    'gtk/authentication_page.blp',
    'gtk/login_window.blp',
    'gtk/user_config_page.blp',
    'gtk/ssh_config_page.blp',
    'gtk/ssh_create_page.blp',
    'gtk/accounts_page.blp',
    'gtk/setup_page.blp',
    'gtk/invigilator_page.blp',
    'gtk/preferences_dialog.blp',
    'gtk/value_validator.blp',
    'gtk/repo_details_dialog.blp',
    'gtk/repo_remove_alert.blp',
]

blueprints = custom_target('blueprints',
  input: files(blueprints_src),
  output: '.',
  command: [find_program('blueprint-compiler'), 'batch-compile', '@OUTPUT@', '@CURRENT_SOURCE_DIR@', '@INPUT@'],
)

gitlink_deps = [
  dependency('gtk4'),
  dependency('gee-0.8'),
  dependency('gio-2.0'),
  dependency('json-glib-1.0'),
  dependency('libsoup-3.0'),
  dependency('libportal-gtk4'),
  dependency('libgit2-glib-1.0'),
  meson.get_compiler('vala').find_library('posix'),
  meson.get_compiler('vala').find_library('linux'),
  dependency('libadwaita-1', version: '>= 1.2'),
]

gitlink_sources += gnome.compile_resources('gitlink-resources',
  'gitlink.gresource.xml',
  dependencies: blueprints,
  c_name: 'gitlink'
)

executable('gitlink', gitlink_sources,
  dependencies: gitlink_deps,
  vala_args: ['--gresourcesdir=src/'],
  install: true,
  export_dynamic: true
)
